Fix bootstrap popover header text color when documentation page is in dark mode.

--- a/src/bootstrap-popover.scss
+++ b/src/bootstrap-popover.scss
@@ -4,6 +4,7 @@ $popover-arrow-outer-width: 11px;
 $popover-arrow-outer-color: rgba(0,0,0,.25);
 $popover-arrow-color: #fff;
 $popover-header-bg: #f7f7f7;
+$text-color: #212529;
 
 .popover {
     p {
@@ -21,7 +22,7 @@ $popover-header-bg: #f7f7f7;
         font-family: inherit;
         font-weight: 500;
         line-height: 1.1;
-        color: inherit;
+        color: $text-color;
     }
 
     .btn {
@@ -40,7 +41,7 @@ $popover-header-bg: #f7f7f7;
         line-height: 1.25;
         border-radius: .25rem;
         transition: all .15s ease-in-out;
-        color: #212529;
+        color: $text-color;
     }
 
     .btn:focus, .btn:hover {
@@ -261,7 +262,7 @@ $popover-header-bg: #f7f7f7;
         padding: 8px 14px;
         margin-bottom: 0;
         font-size: 1rem;
-        color: inherit;
+        color: $text-color;
         background-color: #f7f7f7;
         border-bottom: 1px solid #ebebeb;
         border-top-left-radius: calc(.3rem - 1px);
